--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,12 +1,12 @@
 project_name: five-hunerd
 builds:
-  - env: [CGO_ENABLED=0, CC=x86_64-w64-mingw32-gcc]
+  - env: [CGO_ENABLED=0]
     goos:
       - linux
       - windows
     goarch:
       - amd64
-      - arm64
+      # - arm64
 archives:
   - format: zip
     wrap_in_directory: true
