--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,6 +2,7 @@ project_name: five-hunerd
 builds:
   - env:
       - CGO_ENABLED=0
+      - CC=x86_64-w64-mingw32-gcc
     goos:
       - linux
       - windows
