--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     env:
       CGO_ENABLED: 0
       CC: x86_64-w64-mingw32-gcc
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,6 +23,9 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
+      - name: Install mingw32-gcc
+        run: |
+          sudo apt-get install gcc-mingw-w64
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
