--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: goreleaser
+name: ci
 
 on:
   push:
@@ -9,10 +9,7 @@ permissions:
   contents: write
 
 jobs:
-  goreleaser:
-    env:
-      CGO_ENABLED: 1
-      CC: x86_64-w64-mingw32-gcc
+  ci:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -34,3 +31,5 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CGO_ENABLED: 1
+          CC: x86_64-w64-mingw32-gcc
