--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,11 +5,12 @@ before:
 builds:
   - env:
       - CGO_ENABLED=1
-      - CC_FOR_windows_x86_64=x86_64-w64-mingw32-gcc
+      - CC=x86_64-w64-mingw32-gcc
+      # - CC_FOR_windows_x86_64=x86_64-w64-mingw32-gcc
     goos:
-      - linux
+      # - linux
       - windows
-      - darwin
+      # - darwin
     goarch:
       - amd64
     ignore:
@@ -22,8 +23,8 @@ archives:
       - README.md
       - assets/*
     replacements:
-      linux: Linux
+      # linux: Linux
       windows: Windows
-      darwin: Darwin
-      386: i386
+      # darwin: Darwin
+      # 386: i386
       amd64: x86_64
